@@ -156,7 +156,7 @@ of those expired."
                        (when nevents
                          (xlib:process-event *display* :handler #'handle-event)))
 		     ;; Otherwise, simply wait for an event
-		     (xlib:process-event *display* :handler #'handle-event :timeout nil))
+                     (xlib:process-event *display* :handler #'handle-event :timeout nil))
 		 ;; flush any pending output. You'd think process-event would, but
 		 ;; it seems not.
 		 (xlib:display-finish-output *display*))
